--- a/form.html
+++ b/form.html
@@ -28,7 +28,7 @@
                     <fieldset>
                         <legend>User Information</legend>
                         <label class="top">Username*<input type="text"></label>
-                        <label class="top">Password*<input type="password" required pattern="[a-zA-Z0-9]{8,}">
+                        <label class="top">Password*<input type="password" required pattern="[a-zA-Z0-9]{8,}"></label>
                         <label class="top">ReEnter Password*<input type="password"></label>       
                         <label class="top">Please Enter A Valid Email Address*<input type="email"></label>
                         <br>
