--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="title" content="WDD 230 - Web Frontend Development">
     <meta name="author" content="Seth Markle">
     <meta name="description" content="Seth's WDD 230 chamber of commerce project for BYUI">
-    <meta name="author" content="Seth Markle">
     <meta property="og:title" content="Hudson Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
@@ -60,6 +59,8 @@
                   <a href="lesson05/bom.html">DOM Manipulation</a>
                 <br>
                   <a href="form.html">Form Build</a>
+                <br>
+                  <a href="lesson09/prophets.html">JSON Data</a> 
                 </div>
             </section>
             <section>
