--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/base.css">
+    <script defer src="scripts/links.js"></script>
     <title>Seth Markle - WDD 230 - Web Frontend Development</title>
 </head>
 <body>    
