--- a/final/home.html
+++ b/final/home.html
@@ -46,7 +46,7 @@
                     We are all about freshness here at Bountiful Foods.  We are here to help you live a better lifestyle.  Our
                     delivery trucks are on the road six days a week to serve and meet your needs.
                     <br><br>
-                    Looking to help us out?  We are always in search of others who share our vison and goal.</h2>  
+                    Looking to help us out?  We are always in search of others who share our vison and goals.</h2>  
                 </p>
             </div>
                 <div class="cardContent">
