--- a/final/home.html
+++ b/final/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bountiful Foods</title>
+    <title>Scoots</title>
     <meta name="description" content="Final Website">
     <meta name="author" content="Seth Markle">
     <link rel="stylesheet" href="../final/css/little.css">
@@ -39,7 +39,7 @@
         </nav>
         <main>
             <div class="textContent">
-                <h1>Bountiful Foods</h1>
+                <h1>Scoots</h1>
                 <p><h2>At Bountiful Foods we are dedicated to supporting and promoting Bountiful Foods within our community. Our goal is to provide the
                     the community with healthy fruits and vegitables.
                     <br><br>
