--- a/final/scoots.html
+++ b/final/scoots.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bountiful Foods</title>
+    <title>Scoots</title>
     <meta name="description" content="Final Website">
     <meta name="author" content="Seth Markle">
-    <link rel="stylesheet" href="../final/css/little.css">
-    <link rel="stylesheet" href="../final/css/big.css">
+    <link rel="stylesheet" href="little.css">
+    <link rel="stylesheet" href="big.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
     <div class="viewport">
         <hr>
         <header>
-                <img class="logo" src="photos/logo.png" alt="logo"></a>
+                <img class="logo" src="images/logo.jpg" alt="logo"></a>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img class="social-logo" src="photos/fb.png" alt="fb icon"></a>
@@ -32,7 +32,7 @@
         </header>
         <nav id="mainnav">
             <ul>
-                <li class="menuItem"><a href="../final/home.html">Home</a></li>
+                <li class="menuItem"><a href="scoots.html">Home</a></li>
                 <li class="menuItem"><a href="../final/fresh.html">Fresh</a></li>
                 <li class="menuItem"><a href="../final/aboutus.html">About Us</a></li>
             </ul>
