--- a/final/scoots.html
+++ b/final/scoots.html
@@ -25,17 +25,17 @@
                 <img class="logo" src="images/logo.jpg" alt="logo"></a>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
-                    <img class="social-logo" src="photos/fb.png" alt="fb icon"></a>
+                    <img class="social-logo" src="images/fb.png" alt="fb icon"></a>
                 <a href="https://www.linkedin.com/" target="_blank">
-                    <img class="social-logo" src="photos/linkdin.jpg" alt="in icon"></a>
+                    <img class="social-logo" src="images/linkdin.jpg" alt="in icon"></a>
             </div>
         </header>
         <nav id="mainnav">
             <ul>
                 <li class="menuItem"><a href="scoots.html">Home</a></li>
-                <li class="menuItem"><a href="">Rentals</a></li>
-                <li class="menuItem"><a href="">Reservations</a></li>
-                <li class="menuItem"><a href="">Contact</a></li>
+                <li class="menuItem"><a href="rentals.html">Rentals</a></li>
+                <li class="menuItem"><a href="reservations.html">Reservations</a></li>
+                <li class="menuItem"><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <main>
@@ -105,7 +105,7 @@
                 </div>
             </div>
             <div class="cards">
-                <a href="final/fresh.html" class="button nohover">Make your own fruit drink mix!</a>
+                <a href="reservations.html" class="button nohover">Make your reservation today!</a>
                 <div class="card">
                     <picture>
                         <img src="photos/drink1.jpg" alt="">
