--- a/final/rentals.html
+++ b/final/rentals.html
@@ -22,14 +22,14 @@
     <div class="viewport">
         <hr>
         <header>
-                <img class="logo" src="images/logo.jpg" alt="logo"></a>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                    <img class="social-logo" src="images/fb.png" alt="fb icon"></a>
-                <a href="https://www.linkedin.com/" target="_blank">
-                    <img class="social-logo" src="images/linkdin.jpg" alt="in icon"></a>
-            </div>
-        </header>
+            <img class="logo" src="images/logo.jpg" alt="logo"></a>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img class="social-logo" src="images/fb.png" alt="fb icon"></a>
+            <a href="https://www.tiktok.com/explore" target="_blank">
+                <img class="social-logo" src="images/tiktok.png" alt="tt icon"></a>
+        </div>
+    </header>
         <nav id="mainnav">
             <ul>
                 <li class="menuItem"><a href="scoots.html">Home</a></li>
