--- a/final/scoots.html
+++ b/final/scoots.html
@@ -26,8 +26,8 @@
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img class="social-logo" src="images/fb.png" alt="fb icon"></a>
-                <a href="https://www.linkedin.com/" target="_blank">
-                    <img class="social-logo" src="images/linkdin.jpg" alt="in icon"></a>
+                <a href="https://www.tiktok.com/explore" target="_blank">
+                    <img class="social-logo" src="images/tiktok.png" alt="tt icon"></a>
             </div>
         </header>
         <nav id="mainnav">
@@ -41,12 +41,9 @@
         <main>
             <div class="textContent">
                 <h1>Scoots</h1>
-                <p><h2>At Bountiful Foods we are dedicated to supporting and promoting Bountiful Foods within our community. Our goal is to provide the
-                    the community with healthy fruits and vegitables.
-                    <br><br>
+                <p><h2>Welcome to Scoots where we have you covered on simple rentals.
                     We are all about freshness here at Bountiful Foods.  We are here to help you live a better lifestyle.  Our
                     delivery trucks are on the road six days a week to serve and meet your needs.
-                    <br><br>
                     Looking to help us out?  We are always in search of others who share our vison and goals.</h2>  
                 </p>
             </div>
