--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,14 +21,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Gugi&amp;display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
 </head>
-
-<body>
+<header>
     <div class="viewport">
-        <hr>
-        <header>
-                <img src="logo" srcset="images/logo.webp" alt="logo">
-        </header>
+        <img src="images/logo.webp" alt="logo">
     </div>
+    </header>
+    <body>
           <nav id="mainnav">
             <ul>
                 <li class="hamburger" id="menubutton">
