--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -21,14 +21,12 @@
     <meta property="og:image" content="https://sethro552.github.io/wdd230/chamber/images/logo.webp">
     <meta property="og:url" content="https://sethro552.github.io/wdd230/chamber/index.html">
 </head>
-
-<body>
+<header>
     <div class="viewport">
-        <hr>
-        <header>
-                <img src="logo" srcset="images/logo.webp" alt="logo">
-        </header>
+        <img src="images/logo.webp" alt="logo">
     </div>
+    </header>
+    <body>
           <nav id="mainnav">
             <ul>
                 <li class="hamburger" id="menubutton">
