--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
     <p>Reminder: Chamber of Commerce Meet & Greet this Wednesday at 7:00pm.</p>
   </div>
   <main>
-    <div class="banner"><img src="images/hero.webp" alt="banner"></div>
+    <div class="banner"><img src="/images/hero.webp" alt=""></div>
     <div class="textContent">
       <h1>Hudson Chamber of Commerce</h1><br>
       <h3>We're devoted to supporting and promoting the original business community. Our goal is to help businesses network, grow, and thrive.</h3><br>
