--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,7 +42,7 @@
         <main>
             <h1>Chamber of Commerce Members</h1>
             <button class="button" id="toggle">List View</button>
-            <div id="members" class="members">Please Wait...</div>
+            <div id="members" class="members"></div>
         </main>
         <footer>
             <div class="ftop">
