--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,6 +23,7 @@
   <div class="viewport">
       <img src="images/logo.webp" alt="logo">
   </div>
+  <h1>Hudson Chamber of Commerce</h1>
   </header>
   <body>
   <nav id="mainnav">
@@ -46,9 +47,9 @@
     <p>Reminder: Chamber of Commerce Meet & Greet this Wednesday at 7:00pm.</p>
   </div>
   <main>
-    <div class="banner"><img src="/images/hero.webp" alt=""></div>
+    <div class="banner"><img src="" alt=""></div>
     <div class="textContent">
-      <h1>Hudson Chamber of Commerce</h1><br>
+      <h2>Our Goal</h2><br>
       <h3>We're devoted to supporting and promoting the original business community. Our goal is to help businesses network, grow, and thrive.</h3><br>
       <br>
       <h3>Through our events, activites, and advocacy, we aim to foster a strong and vibrant original small town feel. Whether you're a small business proprietor, a large corperation,<br>
